--- a/TestSite/uSync/v8/Content/about-us.config
+++ b/TestSite/uSync/v8/Content/about-us.config
@@ -116,9 +116,15 @@
   ]
 }]]></Value>
     </bodyText>
+    <contentPicker>
+      <Value><![CDATA[]]></Value>
+    </contentPicker>
     <keywords>
       <Value><![CDATA[[]]]></Value>
     </keywords>
+    <multiUrlPicker>
+      <Value><![CDATA[]]></Value>
+    </multiUrlPicker>
     <pageTitle>
       <Value Culture="en-us"><![CDATA[About Us]]></Value>
       <Value Culture="en-gb"><![CDATA[About Us]]></Value>
