--- a/TestSite/uSync/v8/ContentTypes/blogpost.config
+++ b/TestSite/uSync/v8/ContentTypes/blogpost.config
@@ -30,6 +30,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>3</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -43,6 +45,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -56,6 +60,8 @@
       <Description><![CDATA[Introduction to your blog post. This is also used in the summaries on the front of the blog as well as the homepage]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -69,6 +75,8 @@
       <Description><![CDATA[The title of the page, this is also the first text in a google search result. The ideal length is between 40 and 60 characters]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
   </GenericProperties>
