--- a/TestSite/uSync/v8/ContentTypes/home.config
+++ b/TestSite/uSync/v8/ContentTypes/home.config
@@ -35,6 +35,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -48,6 +50,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Design</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -61,6 +65,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Design</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -74,6 +80,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>4</SortOrder>
       <Tab>Footer</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -87,6 +95,8 @@
       <Description><![CDATA[Caption on the Call To Action Button]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Footer</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -100,6 +110,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>3</SortOrder>
       <Tab>Footer</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -113,6 +125,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Footer</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -126,6 +140,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Footer</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -139,6 +155,8 @@
       <Description><![CDATA[Spice up the homepage by adding a beautiful photo that relates to your business]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Design</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -152,6 +170,8 @@
       <Description><![CDATA[The caption on the button]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Hero</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -165,6 +185,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>3</SortOrder>
       <Tab>Hero</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -178,6 +200,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Hero</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -191,6 +215,8 @@
       <Description><![CDATA[This is the main headline for the hero area on the Homepage]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Hero</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -204,6 +230,8 @@
       <Description><![CDATA[Optional. If you add a logo it'll be used in the upper left corner instead of the site name. Make sure to use a transparent logo for best results]]></Description>
       <SortOrder>4</SortOrder>
       <Tab>Design</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -217,6 +245,8 @@
       <Description><![CDATA[Used on the homepage as well as the title and social cards]]></Description>
       <SortOrder>3</SortOrder>
       <Tab>Design</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
   </GenericProperties>
