--- a/TestSite/uSync/v8/ContentTypes/mainnavigation.config
+++ b/TestSite/uSync/v8/ContentTypes/mainnavigation.config
@@ -26,6 +26,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Main Navigation</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Culture</Variations>
     </GenericProperty>
   </GenericProperties>
