--- a/TestSite/uSync/v8/ContentTypes/people.config
+++ b/TestSite/uSync/v8/ContentTypes/people.config
@@ -33,6 +33,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
   </GenericProperties>
