--- a/TestSite/uSync/v8/ContentTypes/person.config
+++ b/TestSite/uSync/v8/ContentTypes/person.config
@@ -30,6 +30,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Details</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -43,6 +45,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Details</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -56,6 +60,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Social</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -69,6 +75,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>3</SortOrder>
       <Tab>Social</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -82,6 +90,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Social</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -95,6 +105,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Details</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -108,6 +120,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Social</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
   </GenericProperties>
