--- a/TestSite/uSync/v8/ContentTypes/product.config
+++ b/TestSite/uSync/v8/ContentTypes/product.config
@@ -28,6 +28,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Detailed Description</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -41,6 +43,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Product Details</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -54,6 +58,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>3</SortOrder>
       <Tab>Product Details</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -67,6 +73,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Features</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -80,6 +88,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>5</SortOrder>
       <Tab>Product Details</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -93,6 +103,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Product Details</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -106,6 +118,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Product Details</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -119,6 +133,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>4</SortOrder>
       <Tab>Product Details</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
   </GenericProperties>
