--- a/TestSite/uSync/v8/Content/biker-jacket.config
+++ b/TestSite/uSync/v8/Content/biker-jacket.config
@@ -32,7 +32,29 @@
       <Value><![CDATA[Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.]]></Value>
     </description>
     <features>
-      <Value><![CDATA[[{"key":"6a47c043-7699-49c6-a0ed-b335b135ea2b","name":"Free shipping","ncContentTypeAlias":"feature","featureName":"Free shipping","featureDetails":"Isn't that awesome - you only pay for the product"},{"key":"075c935f-4987-4a46-bed9-3286c27f0121","name":"1 Day return policy","ncContentTypeAlias":"feature","featureName":"1 Day return policy","featureDetails":"You'll need to make up your mind fast"},{"key":"457e0ee3-c066-46fa-b379-a083b38aaa20","name":"100 Years warranty","ncContentTypeAlias":"feature","featureName":"100 Years warranty","featureDetails":"But if you're satisfied it'll last a lifetime"}]]]></Value>
+      <Value><![CDATA[[
+  {
+    "key": "6a47c043-7699-49c6-a0ed-b335b135ea2b",
+    "name": "Free shipping",
+    "ncContentTypeAlias": "feature",
+    "featureName": "Free shipping",
+    "featureDetails": "Isn't that awesome - you only pay for the product"
+  },
+  {
+    "key": "075c935f-4987-4a46-bed9-3286c27f0121",
+    "name": "1 Day return policy",
+    "ncContentTypeAlias": "feature",
+    "featureName": "1 Day return policy",
+    "featureDetails": "You'll need to make up your mind fast"
+  },
+  {
+    "key": "457e0ee3-c066-46fa-b379-a083b38aaa20",
+    "name": "100 Years warranty",
+    "ncContentTypeAlias": "feature",
+    "featureName": "100 Years warranty",
+    "featureDetails": "But if you're satisfied it'll last a lifetime"
+  }
+]]]></Value>
     </features>
     <photos>
       <Value><![CDATA[umb://media/55514845b8bd487cb3709724852fd6bb]]></Value>
