--- a/TestSite/uSync/v8/Content/todo-list-for-the-starter-kit.config
+++ b/TestSite/uSync/v8/Content/todo-list-for-the-starter-kit.config
@@ -6,15 +6,19 @@
     <Trashed>false</Trashed>
     <ContentType>contentPage</ContentType>
     <CreateDate>2020-05-31T11:20:38</CreateDate>
-    <NodeName Default="Todo list for the Starter Kit" />
+    <NodeName Default="Todo list for the Starter Kit">
+      <Name Culture="en-us">Todo list for the Starter Kit</Name>
+    </NodeName>
     <SortOrder>1</SortOrder>
-    <Published Default="true" />
+    <Published Default="true">
+      <Published Culture="en-us">true</Published>
+    </Published>
     <Schedule />
     <Template Key="fa0feea0-81a4-4450-b8dc-692f3a0bcad5">contentPage</Template>
   </Info>
   <Properties>
     <bodyText>
-      <Value><![CDATA[{
+      <Value Culture="en-us"><![CDATA[{
   "name": "1 column layout",
   "sections": [
     {
@@ -52,11 +56,17 @@
   ]
 }]]></Value>
     </bodyText>
+    <contentPicker>
+      <Value><![CDATA[]]></Value>
+    </contentPicker>
     <keywords>
       <Value><![CDATA[[]]]></Value>
     </keywords>
+    <multiUrlPicker>
+      <Value><![CDATA[]]></Value>
+    </multiUrlPicker>
     <pageTitle>
-      <Value><![CDATA[Things to improve]]></Value>
+      <Value Culture="en-us"><![CDATA[Things to improve]]></Value>
     </pageTitle>
     <seoMetaDescription>
       <Value><![CDATA[]]></Value>
