--- a/TestSite/uSync/v8/ContentTypes/contact.config
+++ b/TestSite/uSync/v8/ContentTypes/contact.config
@@ -30,6 +30,8 @@
       <Description><![CDATA[If Umbraco Forms is installed you'll be able to select a form]]></Description>
       <SortOrder>3</SortOrder>
       <Tab>Form</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -43,6 +45,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Form</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -56,6 +60,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Form</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -69,6 +75,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Map</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -82,6 +90,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Map</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -95,6 +105,8 @@
       <Description><![CDATA[The title of the page, this is also the first text in a google search result. The ideal length is between 40 and 60 characters]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Form</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
   </GenericProperties>
