--- a/TestSite/uSync/v8/ContentTypes/contentbase.config
+++ b/TestSite/uSync/v8/ContentTypes/contentbase.config
@@ -27,6 +27,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Culture</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -40,6 +42,8 @@
       <Description><![CDATA[The title of the page, this is also the first text in a google search result. The ideal length is between 40 and 60 characters]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Culture</Variations>
     </GenericProperty>
   </GenericProperties>
