--- a/TestSite/uSync/v8/ContentTypes/contentpage.config
+++ b/TestSite/uSync/v8/ContentTypes/contentpage.config
@@ -33,6 +33,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Culture</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -46,6 +48,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>3</SortOrder>
       <Tab>Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Culture</Variations>
     </GenericProperty>
   </GenericProperties>
