--- a/TestSite/uSync/v8/ContentTypes/navigationbase.config
+++ b/TestSite/uSync/v8/ContentTypes/navigationbase.config
@@ -27,6 +27,8 @@
       <Description><![CDATA[Keywords that describe the content of the page. This is considered optional since most modern search engines don't use this anymore]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Navigation &amp; SEO</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -40,6 +42,8 @@
       <Description><![CDATA[A brief description of the content on your page. This text is shown below the title in a google search result and also used for Social Sharing Cards. The ideal length is between 130 and 155 characters]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Navigation &amp; SEO</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -53,6 +57,8 @@
       <Description><![CDATA[If you don't want this page to appear in the navigation, check this box]]></Description>
       <SortOrder>2</SortOrder>
       <Tab>Navigation &amp; SEO</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
   </GenericProperties>
