--- a/TestSite/uSync/v8/ContentTypes/products.config
+++ b/TestSite/uSync/v8/ContentTypes/products.config
@@ -33,6 +33,8 @@
       <Description><![CDATA[This is just used to prefix pricing]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Shop</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
     <GenericProperty>
@@ -46,6 +48,8 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab>Shop</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
       <Variations>Nothing</Variations>
     </GenericProperty>
   </GenericProperties>
