--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -8,7 +8,7 @@
     <CreateDate>2020-10-01T18:39:46</CreateDate>
     <NodeName Default="Main Navigation">
       <Name Culture="en-us">Main Navigation</Name>
-      <Name Culture="en-gb">Main Navigation</Name>
+      <Name Culture="en-gb">Main Navigation GB</Name>
     </NodeName>
     <SortOrder>5</SortOrder>
     <Published Default="true">
@@ -20,7 +20,7 @@
   </Info>
   <Properties>
     <megaNavV8>
-      <Value><![CDATA[[
+      <Value Culture="en-us"><![CDATA[[
   {
     "id": 1104,
     "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
@@ -98,6 +98,74 @@
     "published": true,
     "naviHide": false,
     "culture": "en-US"
+  }
+]]]></Value>
+      <Value Culture="en-gb"><![CDATA[[
+  {
+    "id": 1104,
+    "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
+    "name": "Home",
+    "url": "/en/",
+    "children": [],
+    "icon": "icon-home color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "en-GB"
+  },
+  {
+    "id": 1114,
+    "udi": "umb://document/e8ad9b65cff64952ac5befe56a60db62",
+    "name": "People",
+    "url": "/en/people/",
+    "children": [],
+    "icon": "icon-user-females-alt color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "en-GB"
+  },
+  {
+    "id": 1120,
+    "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
+    "name": "About us GB",
+    "url": "/en/about-us-gb/",
+    "children": [],
+    "icon": "icon-document",
+    "published": true,
+    "naviHide": false,
+    "culture": "en-GB"
+  },
+  {
+    "id": 1123,
+    "udi": "umb://document/1d770f10d1ca4a269d68071e2c9f7ac1",
+    "name": "Blog",
+    "url": "/en/blog/",
+    "children": [],
+    "icon": "icon-calendar-alt color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "en-GB"
+  },
+  {
+    "id": 1127,
+    "udi": "umb://document/4a1f4198e14348baa0f51a7ef2df23aa",
+    "name": "Contact",
+    "url": "/en/contact/",
+    "children": [],
+    "icon": "icon-map-location color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "en-GB"
+  },
+  {
+    "id": 1105,
+    "udi": "umb://document/ec4aafcc0c254f25a8fe705bfae1d324",
+    "name": "Products",
+    "url": "/en/products/",
+    "children": [],
+    "icon": "icon-shopping-basket color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "en-GB"
   }
 ]]]></Value>
     </megaNavV8>
