--- a/TestSite/uSync/v8/ContentTypes/mainnavigation.config
+++ b/TestSite/uSync/v8/ContentTypes/mainnavigation.config
@@ -28,7 +28,7 @@
       <Tab>Main Navigation</Tab>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
-      <Variations>Nothing</Variations>
+      <Variations>Culture</Variations>
     </GenericProperty>
   </GenericProperties>
   <Tabs>
