--- a/TestSite/uSync/v8/Content/todo-list-for-the-starter-kit.config
+++ b/TestSite/uSync/v8/Content/todo-list-for-the-starter-kit.config
@@ -6,9 +6,13 @@
     <Trashed>false</Trashed>
     <ContentType>contentPage</ContentType>
     <CreateDate>2020-10-01T09:47:53</CreateDate>
-    <NodeName Default="Todo list for the Starter Kit" />
+    <NodeName Default="Todo list for the Starter Kit">
+      <Name Culture="en-us">Todo list for the Starter Kit</Name>
+    </NodeName>
     <SortOrder>1</SortOrder>
-    <Published Default="true" />
+    <Published Default="true">
+      <Published Culture="en-us">true</Published>
+    </Published>
     <Schedule />
     <Template Key="660fcd1e-f97f-4930-a4c5-cdeebd30d4e6">contentPage</Template>
   </Info>
