--- a/src/AaronSadler.MegaNavV8.Core/AaronSadler.MegaNavV8.Core.csproj
+++ b/src/AaronSadler.MegaNavV8.Core/AaronSadler.MegaNavV8.Core.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <Configurations>Debug;Release;Staging</Configurations>
+    <Version>8.1.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="UmbracoCms.Web" Version="8.7.0" />
