Updated test site

--- a/TestSite/uSync/v8/ContentTypes/mainnavigation.config
+++ b/TestSite/uSync/v8/ContentTypes/mainnavigation.config
@@ -19,8 +19,8 @@
       <Key>3c124917-fe41-40a3-90f5-fc8141fb5ee8</Key>
       <Name>MegaNav V8</Name>
       <Alias>megaNavV8</Alias>
-      <Definition>0a30585f-a2ee-447f-8c58-6644dc3087b4</Definition>
-      <Type>Our.Umbraco.MeganavV8</Type>
+      <Definition>7ecfcf73-9da9-43cc-9997-59ff77367d03</Definition>
+      <Type>AaronSadler.MegaNavV8</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
