--- a/Builds/NuGet/AaronSadler.MegaNavV8.Api.nuspec
+++ b/Builds/NuGet/AaronSadler.MegaNavV8.Api.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>AaronSadler.MegaNavV8.Api</id>
-    <version>8.1.0</version>
+    <version>8.1.1</version>
     <title>MegaNavV8 Api</title>
     <authors>Aaron Sadler, Callum Whyte</authors>
     <owners>Aaron Sadler, Callum Whyte</owners>
@@ -24,7 +24,7 @@
     </dependencies>
   </metadata>
       <files>
-	  <file src="..\..\src\AaronSadler.MegaNavV8.Api\bin\Release\Our.Umbraco.MeganavV8.Api.dll" target="lib\net472" />
+	  <file src="..\..\src\AaronSadler.MegaNavV8.Api\bin\Release\AaronSadler.MegaNavV8.Api.dll" target="lib\net472" />
       <file src="..\MegaNavV8-Logo.png"/>
     </files>
 </package>
