--- a/TestSite/Web.config
+++ b/TestSite/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
     <!--
@@ -49,6 +49,7 @@
 
         <add key="Umbraco.ModelsBuilder.Enable" value="true" />
         <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
+        <!--<add key="DisableUmbracoCloudSync" value="true" />-->
     </appSettings>
 
     <!--
