--- a/TestSite/Web.config
+++ b/TestSite/Web.config
@@ -50,6 +50,7 @@
         <add key="Umbraco.ModelsBuilder.Enable" value="true" />
         <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
         <!--<add key="DisableUmbracoCloudSync" value="true" />-->
+        <!--<add key="DisableUmbracoCloudDependencySync" value="true" />-->
     </appSettings>
 
     <!--
