--- a/TestSite/Web.config
+++ b/TestSite/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
     <!--
@@ -104,7 +104,7 @@
             <add verb="GET" path="DependencyHandler.axd" type="ClientDependency.Core.CompositeFiles.CompositeDependencyHandler, ClientDependency.Core " />
         </httpHandlers>
 
-        <compilation defaultLanguage="c#" debug="false" batch="true" targetFramework="4.7.2" numRecompilesBeforeAppRestart="50" />
+        <compilation defaultLanguage="c#" debug="true" batch="true" targetFramework="4.7.2" numRecompilesBeforeAppRestart="50" />
 
         <authentication mode="Forms">
             <forms name="yourAuthCookie" loginUrl="login.aspx" protection="All" path="/" />
