--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -106,41 +106,44 @@
     "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
     "name": "Home",
     "url": "/en/",
-    "children": [],
+    "children": [
+      {
+        "id": 1114,
+        "udi": "umb://document/e8ad9b65cff64952ac5befe56a60db62",
+        "name": "People",
+        "url": "/en/people/",
+        "children": [
+          {
+            "id": 1120,
+            "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
+            "name": "About us GB",
+            "url": "/en/about-us-gb/",
+            "children": [
+              {
+                "id": 1123,
+                "udi": "umb://document/1d770f10d1ca4a269d68071e2c9f7ac1",
+                "name": "Blog",
+                "url": "/en/blog/",
+                "children": [],
+                "icon": "icon-calendar-alt color-black",
+                "published": true,
+                "naviHide": false,
+                "culture": "en-GB"
+              }
+            ],
+            "icon": "icon-document",
+            "published": true,
+            "naviHide": false,
+            "culture": "en-GB"
+          }
+        ],
+        "icon": "icon-user-females-alt color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": "en-GB"
+      }
+    ],
     "icon": "icon-home color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-GB"
-  },
-  {
-    "id": 1114,
-    "udi": "umb://document/e8ad9b65cff64952ac5befe56a60db62",
-    "name": "People",
-    "url": "/en/people/",
-    "children": [],
-    "icon": "icon-user-females-alt color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-GB"
-  },
-  {
-    "id": 1120,
-    "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
-    "name": "About us GB",
-    "url": "/en/about-us-gb/",
-    "children": [],
-    "icon": "icon-document",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-GB"
-  },
-  {
-    "id": 1123,
-    "udi": "umb://document/1d770f10d1ca4a269d68071e2c9f7ac1",
-    "name": "Blog",
-    "url": "/en/blog/",
-    "children": [],
-    "icon": "icon-calendar-alt color-black",
     "published": true,
     "naviHide": false,
     "culture": "en-GB"
