Added test links

--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -30,7 +30,10 @@
     "icon": "icon-home color-black",
     "published": true,
     "naviHide": false,
-    "culture": "en-US"
+    "culture": "en-US",
+    "description": "/us/",
+    "queryString": "#test",
+    "anchor": "#test5"
   },
   {
     "id": 1114,
@@ -41,7 +44,8 @@
     "icon": "icon-user-females-alt color-black",
     "published": true,
     "naviHide": false,
-    "culture": "en-US"
+    "culture": "en-US",
+    "description": "/us/people/"
   },
   {
     "id": 1120,
@@ -58,13 +62,15 @@
         "icon": "icon-document",
         "published": true,
         "naviHide": false,
-        "culture": "en-US"
+        "culture": "en-US",
+        "description": "/us/about-us/about-this-starter-kit/"
       }
     ],
     "icon": "icon-document",
     "published": true,
     "naviHide": false,
-    "culture": "en-US"
+    "culture": "en-US",
+    "description": "/us/about-us/"
   },
   {
     "id": 1123,
@@ -75,7 +81,8 @@
     "icon": "icon-calendar-alt color-black",
     "published": true,
     "naviHide": false,
-    "culture": "en-US"
+    "culture": "en-US",
+    "description": "/us/blog/"
   },
   {
     "id": 1127,
@@ -86,7 +93,8 @@
     "icon": "icon-map-location color-black",
     "published": true,
     "naviHide": false,
-    "culture": "en-US"
+    "culture": "en-US",
+    "description": "/us/contact/"
   },
   {
     "id": 1105,
@@ -97,7 +105,16 @@
     "icon": "icon-shopping-basket color-black",
     "published": true,
     "naviHide": false,
-    "culture": "en-US"
+    "culture": "en-US",
+    "description": "/us/products/"
+  },
+  {
+    "description": "https://www.google.com#Test12356",
+    "title": "Google",
+    "anchor": "#Test12356",
+    "url": "https://www.google.com#Test12356",
+    "children": [],
+    "icon": "icon-link"
   }
 ]]]></Value>
       <Value Culture="en-gb"><![CDATA[[
@@ -105,45 +122,53 @@
     "id": 1104,
     "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
     "name": "Home",
-    "url": "/en/",
-    "children": [],
+    "url": "/en/#test",
+    "children": [
+      {
+        "id": 1114,
+        "udi": "umb://document/e8ad9b65cff64952ac5befe56a60db62",
+        "name": "People",
+        "url": "/en/people/",
+        "children": [
+          {
+            "id": 1120,
+            "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
+            "name": "About us GB",
+            "url": "/en/about-us-gb/",
+            "children": [
+              {
+                "id": 1123,
+                "udi": "umb://document/1d770f10d1ca4a269d68071e2c9f7ac1",
+                "name": "Blog",
+                "url": "/en/blog/",
+                "children": [],
+                "icon": "icon-calendar-alt color-black",
+                "published": true,
+                "naviHide": false,
+                "culture": "en-GB",
+                "description": "/en/blog/"
+              }
+            ],
+            "icon": "icon-document",
+            "published": true,
+            "naviHide": false,
+            "culture": "en-GB",
+            "description": "/en/about-us-gb/"
+          }
+        ],
+        "icon": "icon-user-females-alt color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": "en-GB",
+        "description": "/en/people/"
+      }
+    ],
     "icon": "icon-home color-black",
     "published": true,
     "naviHide": false,
-    "culture": "en-GB"
-  },
-  {
-    "id": 1114,
-    "udi": "umb://document/e8ad9b65cff64952ac5befe56a60db62",
-    "name": "People",
-    "url": "/en/people/",
-    "children": [],
-    "icon": "icon-user-females-alt color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-GB"
-  },
-  {
-    "id": 1120,
-    "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
-    "name": "About us GB",
-    "url": "/en/about-us-gb/",
-    "children": [],
-    "icon": "icon-document",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-GB"
-  },
-  {
-    "id": 1123,
-    "udi": "umb://document/1d770f10d1ca4a269d68071e2c9f7ac1",
-    "name": "Blog",
-    "url": "/en/blog/",
-    "children": [],
-    "icon": "icon-calendar-alt color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-GB"
+    "culture": "en-GB",
+    "description": "/en/",
+    "queryString": "#test"
   },
   {
     "id": 1127,
@@ -154,7 +179,8 @@
     "icon": "icon-map-location color-black",
     "published": true,
     "naviHide": false,
-    "culture": "en-GB"
+    "culture": "en-GB",
+    "description": "/en/contact/"
   },
   {
     "id": 1105,
@@ -165,7 +191,9 @@
     "icon": "icon-shopping-basket color-black",
     "published": true,
     "naviHide": false,
-    "culture": "en-GB"
+    "culture": "en-GB",
+    "queryString": "#test",
+    "description": "/us/products/#test"
   }
 ]]]></Value>
     </megaNavV8>
