--- a/.gitignore
+++ b/.gitignore
@@ -381,3 +381,4 @@ MigrationBackup/
 # Ignore the Models Builder models out of date flag
 **/App_Data/Models/ood.flag
 TestSite/App_Data/Models/
+*/**/*.zip
