--- a/Builds/NuGet/AaronSadler.MegaNavV8.Api.nuspec
+++ b/Builds/NuGet/AaronSadler.MegaNavV8.Api.nuspec
@@ -22,6 +22,7 @@
 		  <dependency id="AaronSadler.MegaNavV8.Core" version="8.2.0" />
 	  </group>
     </dependencies>
+	<repository type="git" url="https://github.com/AaronSadlerUK/Umbraco.MegaNavV8.git" branch="master" />
   </metadata>
       <files>
 	  <file src="..\..\src\AaronSadler.MegaNavV8.Api\bin\Release\AaronSadler.MegaNavV8.Api.dll" target="lib\net472" />
