--- a/Builds/NuGet/AaronSadler.MegaNavV8.Core.nuspec
+++ b/Builds/NuGet/AaronSadler.MegaNavV8.Core.nuspec
@@ -21,6 +21,7 @@
 		  <dependency id="UmbracoCms.Core" version="8.4.0" />
 	  </group>
     </dependencies>
+	<repository type="git" url="https://github.com/AaronSadlerUK/Umbraco.MegaNavV8.git" branch="master" />
   </metadata>
       <files>
 	  <file src="..\..\src\AaronSadler.MegaNavV8.Core\bin\Release\net472\AaronSadler.MegaNavV8.Core.dll" target="lib\net472" />
